--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,25 @@
 {
-  "name": "GoodVibes",
+  "name": "GoodVibesOnly",
   "version": "1.0",
   "manifest_version": 2,
+  "description": "This extension utilizes the Watson AlchemyLanguage API to semantically parse webpages to determine the emotional setiment of the page",
+  "version": "1.0",
+
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  },
+  
+  "permissions": [
+    "activeTab"
+  ],
+
   "background": {
       "scripts": ["background.js"],
       "persistent": false
   },
   "content_scripts": [{
       "matches": ["<all_urls>"],
-      "js": ["open-dialog.js"]
+      "js": ["popup.js"]
   }]
 }
